--- a/ZonaFitSpring/src/main/resources/application.properties
+++ b/ZonaFitSpring/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=zona_fit
+# Conexion mysql
+spring.datasource.url = jdbc:mysql://localhost:3306/zona_fit_db
+spring.datasource.username = root
+spring.datasource.password = CONTRASEÑA
+sprin.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+# Evitar que se cree el esquema de bd
+spring.jpa.hibernate.ddl-auto.ddl-auto = none
+spring.jpa.show-sql = false
+
+# Desactivar tomcat
+spring.main.web-application-type = none
