--- a/ZonaFitSpring/src/main/resources/application.properties
+++ b/ZonaFitSpring/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.hibernate.ddl-auto.ddl-auto = none
 spring.jpa.show-sql = false
 
 # Desactivar tomcat
-spring.main.web-application-type = none
+#spring.main.web-application-type = none
