--- a/ZonaFitSpring/src/main/resources/application.properties
+++ b/ZonaFitSpring/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.show-sql = false
 
 # Desactivar tomcat
 #spring.main.web-application-type = none
+
+# Tema de PrimeFaces, por defaulst tema de saga
+joinfaces.primefaces.theme = vela
