UPDATE ZonaFitSpring/.../resources/application.properties & CREATE controladro/IndexControlador.java
new controller to xhtml, off spring banner on console)

--- a/ZonaFitSpring/src/main/resources/application.properties
+++ b/ZonaFitSpring/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.show-sql = false
 
 # Tema de PrimeFaces, por defaulst tema de saga
 joinfaces.primefaces.theme = vela
+
+#banner
+spring.main.banner-mode=off
+
