--- a/tareas/src/main/resources/application.properties
+++ b/tareas/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/tareas_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password =CONTRASEÑA
-spring-datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.main.web-application-type=none
 spring.application.name=tareas
+spring.main.banner-mode=off
