UPDATED empleados/.../resources/application.properties --> configured JSPs and MySQL connection

--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -1,12 +1,26 @@
 # Conexión a MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/tareas_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/empleados_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password =CONTRASEÑA
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+# Configuración de salida
 spring.jpa.show-sql=true
-spring.main.web-application-type=none
+
+
+#Configuración para trabajar con jsp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+# Cambiamos el context path de la app
+server.servlet.context-path=/empleados
+#localhost:8080/empleados
+
+# Configuración del logging en consola con el mismo patrón de Logback
 spring.main.banner-mode=off
+logging.pattern.console=[%thread] %-5level: %logger - %msg%n
+logging.level.root=INFO
 
 spring.application.name=empleados
 
